Guards Request Armor #2577 #2609
formatting changes for.